fix css not showing filtered results unless clicked on

--- a/templates/singulinkfx/styles/singulink.css
+++ b/templates/singulinkfx/styles/singulink.css
@@ -495,6 +495,10 @@ li {
     transform: none
 }
 
+li.filtered > ul.level2 {
+    display: block !important;
+}
+
 li,li.in>ul {
     display: block
 }
